chore: fix ts issues, add intro step, dynamic steps

--- a/packages/ibm-products-styles/src/components/Tearsheet/_tearsheet.scss
+++ b/packages/ibm-products-styles/src/components/Tearsheet/_tearsheet.scss
@@ -376,7 +376,7 @@ $motion-duration: $duration-moderate-02;
     padding: $spacing-06 $spacing-06 0 $spacing-06;
   }
 
-  &.#{$block-class}--has-influencer .#{$block-class}__button-container.#{$block-class}__button-container__v2 {
+  .#{$block-class}__button-container.#{$block-class}__button-container__v2 {
     position: fixed;
     bottom: 0;
     left: 0;
