--- a/packages/ibm-products/src/components/Tearsheet/_storybook-styles.scss
+++ b/packages/ibm-products/src/components/Tearsheet/_storybook-styles.scss
@@ -42,3 +42,19 @@
 .step-action-button__cancel {
   grid-column: span 2;
 }
+
+.#{c4p-settings.$carbon-prefix}--tile-group div {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.custom-intro-tile {
+  width: 280px;
+  height: 240px;
+  margin-right: $spacing-05;
+}
+
+.selected-intro-option {
+  padding-bottom: $spacing-06;
+  text-transform: capitalize;
+}
