--- a/packages/ibm-products/src/components/Tearsheet/_storybook-styles.scss
+++ b/packages/ibm-products/src/components/Tearsheet/_storybook-styles.scss
@@ -58,3 +58,12 @@
   padding-bottom: $spacing-06;
   text-transform: capitalize;
 }
+
+.step-form-items {
+  display: flex;
+  container-type: size;
+
+  #city {
+    margin-right: $spacing-06;
+  }
+}
