revert: previous grid format

--- a/packages/ibm-products/src/components/CreateFullPage/_storybook-styles.scss
+++ b/packages/ibm-products/src/components/CreateFullPage/_storybook-styles.scss
@@ -66,6 +66,7 @@ $block-class: #{c4p-settings.$pkg-prefix}--create-full-page;
 }
 
 .#{$story-class}__viewport {
+  overflow: hidden;
   height: 100vh;
 }
 
