--- a/packages/ibm-products-styles/src/components/Datagrid/styles/_datagrid.scss
+++ b/packages/ibm-products-styles/src/components/Datagrid/styles/_datagrid.scss
@@ -5,6 +5,8 @@
 // LICENSE file in the root directory of this source tree.
 //
 
+// stylelint-disable declaration-no-important
+
 @use '@carbon/styles/scss/theme' as *;
 @use '@carbon/styles/scss/utilities' as *;
 @use '@carbon/layout/scss/convert' as *;
@@ -57,7 +59,6 @@
 
     td.#{c4p-settings.$carbon-prefix}--table-column-checkbox,
     th.#{c4p-settings.$carbon-prefix}--table-column-checkbox {
-      /* stylelint-disable-next-line carbon/layout-token-use */
       padding-top: 0.6875rem;
 
       &.#{$block-class}__checkbox-cell {
@@ -92,9 +93,8 @@
       &.#{c4p-settings.$carbon-prefix}--data-table--sm,
       &.#{c4p-settings.$carbon-prefix}--data-table--md {
         .#{$block-class}__cell {
-          /* stylelint-disable-next-line -- to-rem carbon replacement for rem */
           padding-top: to-rem(7px);
-          /* stylelint-disable-next-line -- to-rem carbon replacement for rem */
+
           padding-bottom: to-rem(6px);
         }
       }
@@ -121,7 +121,6 @@
       }
 
       .#{c4p-settings.$carbon-prefix}--table-column-checkbox {
-        /* stylelint-disable-next-line -- to-rem carbon replacement for rem */
         padding-top: to-rem(13px);
       }
     }
@@ -158,7 +157,6 @@
 
 /* This section to be removed after support for slug dropped  - start */
 .#{$block-class} th.#{$block-class}__with-slug {
-  /* stylelint-disable-next-line carbon/theme-token-use */
   box-shadow: inset 0 1px $ai-border-strong;
 }
 
@@ -185,7 +183,6 @@
   .#{c4p-settings.$carbon-prefix}--data-table
   tbody
   tr.#{$block-class}__slug--row {
-  /* stylelint-disable-next-line carbon/theme-token-use */
   box-shadow: inset 1px 0 $ai-border-strong;
 }
 
@@ -232,7 +229,6 @@
 /* This section to be removed after support for slug dropped  - end */
 
 .#{$block-class} th.#{$block-class}__with-ai-label {
-  /* stylelint-disable-next-line carbon/theme-token-use */
   box-shadow: inset 0 1px $ai-border-strong;
 }
 
@@ -259,7 +255,6 @@
   .#{c4p-settings.$carbon-prefix}--data-table
   tbody
   tr.#{$block-class}__ai-label--row {
-  /* stylelint-disable-next-line carbon/theme-token-use */
   box-shadow: inset 1px 0 $ai-border-strong;
 }
 
@@ -404,11 +399,9 @@
   }
 
   .#{$block-class}__carbon-row {
-    // stylelint-disable-next-line declaration-no-important
     flex: none !important;
 
     .#{$block-class}__carbon-row:hover a {
-      // stylelint-disable-next-line declaration-no-important
       color: $link-primary-hover !important;
     }
   }
@@ -416,7 +409,6 @@
   .#{$block-class}__carbon-row .#{$block-class}__left-sticky-column-cell,
   .#{$block-class}__carbon-row .#{$block-class}__right-sticky-column-cell,
   .#{$block-class}__carbon-row .#{$block-class}__checkbox-cell-sticky-left {
-    // stylelint-disable-next-line declaration-no-important
     background-color: $layer-01;
   }
 
@@ -424,7 +416,6 @@
   .#{$block-class}__carbon-row:hover .#{$block-class}__right-sticky-column-cell,
   .#{$block-class}__carbon-row:hover
     .#{$block-class}__checkbox-cell-sticky-left {
-    // stylelint-disable-next-line declaration-no-important
     background-color: $layer-hover-01;
   }
 
@@ -434,7 +425,6 @@
     .#{$block-class}__right-sticky-column-cell,
   .#{c4p-settings.$carbon-prefix}--data-table--selected
     .#{$block-class}__checkbox-cell-sticky-left {
-    // stylelint-disable-next-line declaration-no-important
     background-color: $layer-selected-01;
   }
 
@@ -448,9 +438,8 @@
 
   td.#{c4p-settings.$carbon-prefix}--table-column-checkbox,
   th.#{c4p-settings.$carbon-prefix}--table-column-checkbox {
-    // stylelint-disable-next-line declaration-no-important
     width: $spacing-09 !important;
-    // stylelint-disable-next-line declaration-no-important
+
     padding-right: $spacing-05 !important;
   }
 }
@@ -596,7 +585,6 @@
 }
 
 .#{$block-class}__sticky.#{$block-class}__table-simple {
-  // stylelint-disable-next-line declaration-no-important
   min-width: 0 !important;
 }
 
@@ -606,7 +594,7 @@
 
 .#{$block-class}__sticky.#{$block-class}__table-simple thead > div {
   overflow: hidden;
-  // stylelint-disable-next-line declaration-no-important
+
   width: 100% !important;
 }
 
@@ -677,9 +665,9 @@
   &.#{$block-class}__carbon-row-expanded-hover-active::before {
     position: absolute;
     z-index: 2;
-    /* stylelint-disable-next-line carbon/layout-token-use */
+
     top: var(--#{$block-class}--row-height);
-    /* stylelint-disable-next-line carbon/layout-token-use */
+
     left: calc(
       var(--#{$block-class}--indicator-offset-amount) + #{$spacing-05}
     );
@@ -949,7 +937,7 @@
   .#{$block-class}__col-resizer-range:focus
   + .#{$block-class}__col-resize-indicator::after {
   position: absolute;
-  /* stylelint-disable-next-line carbon/layout-token-use */
+
   top: calc(var(--#{$block-class}--row-height) - 20px);
   right: $spacing-02;
   width: 1px;
