--- a/packages/ibm-products-styles/src/components/Datagrid/styles/_useStickyColumn.scss
+++ b/packages/ibm-products-styles/src/components/Datagrid/styles/_useStickyColumn.scss
@@ -5,12 +5,13 @@
  * LICENSE file in the root directory of this source tree.
  */
 
+// stylelint-disable declaration-no-important
+
 @use '@carbon/styles/scss/theme' as *;
 @use '@carbon/styles/scss/spacing' as *;
 @use './variables';
 
 .#{variables.$block-class}__right-sticky-column-cell {
-  // stylelint-disable-next-line declaration-no-important
   position: sticky !important;
   right: 0;
   display: flex;
@@ -19,13 +20,11 @@
 }
 
 .#{variables.$block-class}__right-sticky-column-header {
-  // stylelint-disable-next-line declaration-no-important
   position: sticky !important;
   right: 0;
 }
 
 .#{variables.$block-class}__left-sticky-column-cell {
-  // stylelint-disable-next-line declaration-no-important
   position: sticky !important;
   left: 0;
   display: flex;
@@ -34,7 +33,6 @@
 }
 
 .#{variables.$block-class}__left-sticky-column-header {
-  // stylelint-disable-next-line declaration-no-important
   position: sticky !important;
   z-index: 10;
   left: 0;
@@ -61,7 +59,6 @@
 }
 
 .#{variables.$block-class}__right-sticky-column-offset-scroll {
-  /* stylelint-disable-next-line */
   right: 6px !important; // offset the vertical scroll bar in the table body
 }
 
