--- a/packages/ibm-products/src/components/ScrollGradient/_storybook-styles.scss
+++ b/packages/ibm-products/src/components/ScrollGradient/_storybook-styles.scss
@@ -4,12 +4,14 @@
 // This source code is licensed under the Apache-2.0 license found in the
 // LICENSE file in the root directory of this source tree.
 //
+
+// stylelint-disable declaration-no-important
+
 @use '@carbon/react/scss/theme' as *;
 @forward '../../../../ibm-products-styles/src/global/styles/project-settings';
 
 .sb-show-main,
 .docs-story {
-  // stylelint-disable-next-line declaration-no-important
   background-color: $layer-01 !important;
 }
 
