--- a/packages/ibm-products/src/components/WebTerminal/_storybook-styles.scss
+++ b/packages/ibm-products/src/components/WebTerminal/_storybook-styles.scss
@@ -5,7 +5,7 @@
 // LICENSE file in the root directory of this source tree.
 //
 
-/* stylelint-disable  */
+// stylelint-disable declaration-no-important
 
 @use '@carbon/styles/scss/colors';
 @use '@carbon/styles/scss/spacing' as *;
@@ -36,10 +36,12 @@ $storybook-block-class: #{c4p-settings.$pkg-prefix}--notifications-panel__story;
 }
 
 $story-anchor: 'web-terminal';
+
 #storybook-docs {
   ul {
     list-style: initial;
   }
+
   ol {
     list-style: decimal;
   }
