feat(cards): style fix

--- a/packages/ibm-products-styles/src/components/Card/_card.scss
+++ b/packages/ibm-products-styles/src/components/Card/_card.scss
@@ -144,11 +144,22 @@ $block-class: #{c4p-settings.$pkg-prefix}--card;
   position: relative;
 }
 
-.#{$block-class}__header__inner-wrapper--decorator {
-  // stylelint-disable-next-line
-  position: absolute !important;
+.#{$block-class} .#{c4p-settings.$carbon-prefix}--slug {
+  position: absolute;
   top: $spacing-05;
   right: $spacing-05;
+}
+
+.#{$block-class}__header__inner-wrapper--decorator {
+  position: absolute;
+  top: $spacing-05;
+  right: $spacing-05;
+
+  .#{c4p-settings.$carbon-prefix}--slug {
+    position: relative;
+    top: unset;
+    right: unset;
+  }
 }
 
 .#{$block-class}__header-container--has-slug,
