--- a/packages/ibm-products-styles/src/components/InlineTip/_inline-tip.scss
+++ b/packages/ibm-products-styles/src/components/InlineTip/_inline-tip.scss
@@ -221,7 +221,7 @@ $purple: #7f3ae7;
   // Repeating here.
   svg {
     position: absolute;
-    right: c4p-settings.$spacing-05;
+    right: $spacing-05;
     width: 1rem;
     height: 1rem;
     flex-shrink: 0;
