--- a/packages/ibm-products-styles/src/components/StatusIcon/_status-icon.scss
+++ b/packages/ibm-products-styles/src/components/StatusIcon/_status-icon.scss
@@ -5,6 +5,8 @@
 // LICENSE file in the root directory of this source tree.
 //
 
+@use 'sass:map';
+
 // Standard imports.
 @use '@carbon/react/scss/colors' as *;
 @use '../../global/styles/project-settings' as *;
