--- a/packages/ibm-products-styles/src/components/UserProfileImage/_user-profile-image.scss
+++ b/packages/ibm-products-styles/src/components/UserProfileImage/_user-profile-image.scss
@@ -5,6 +5,8 @@
 // LICENSE file in the root directory of this source tree.
 //
 
+@use 'sass:map';
+
 // Standard imports.
 @use '@carbon/styles/scss/theme' as *;
 @use '@carbon/styles/scss/spacing' as *;
