fix: try to get build working

--- a/packages/ibm-products/src/components/CoachmarkBeacon/_storybook-styles.scss
+++ b/packages/ibm-products/src/components/CoachmarkBeacon/_storybook-styles.scss
@@ -13,7 +13,7 @@
   max-height: 100%;
   box-sizing: border-box;
   /* stylelint-disable-next-line carbon/layout-use */
-  padding: $spacing-05;
+  padding: 1rem;
   margin-left: 50%;
   transform: translateX(-50%);
 }
