--- a/packages/ibm-products/src/components/FilterPanel/_storybook-styles.scss
+++ b/packages/ibm-products/src/components/FilterPanel/_storybook-styles.scss
@@ -15,5 +15,5 @@ $carbon: #{c4p-settings.$carbon-prefix}--filter-panel;
 
 .filter-panel-stories__viewport {
   width: 16rem;
-  padding: $spacing-05;
+  padding: 1rem;
 }
