--- a/packages/ibm-products/src/components/Coachmark/_storybook-styles.scss
+++ b/packages/ibm-products/src/components/Coachmark/_storybook-styles.scss
@@ -12,9 +12,8 @@
   display: inline-block;
   max-height: 100%;
   box-sizing: border-box;
-
   /* stylelint-disable-next-line carbon/layout-use */
-  padding: $spacing-05;
+  padding: 1rem;
   margin-left: 50%;
   transform: translateX(-50%);
 }
