fix: web component fixes

--- a/packages/ibm-products-web-components/src/components/side-panel/story-styles.scss
+++ b/packages/ibm-products-web-components/src/components/side-panel/story-styles.scss
@@ -5,6 +5,7 @@
 * LICENSE file in the root directory of this source tree.
 */
 @use '@carbon/styles/scss/theme' as *;
+@use '@carbon/styles/scss/spacing' as *;
 
 $story-prefix: 'side-panel-stories__';
 
