--- a/packages/ibm-products/src/components/UserAvatar/_storybook-styles.scss
+++ b/packages/ibm-products/src/components/UserAvatar/_storybook-styles.scss
@@ -6,19 +6,16 @@
 //
 
 @forward '../../../../ibm-products-styles/src/global/styles/project-settings';
-@use '@carbon/styles/scss/themes';
-@use '@carbon/styles/scss/theme';
-@use '@carbon/styles/scss/spacing';
+@use '@carbon/styles/scss/theme' as *;
+@use '@carbon/styles/scss/spacing' as *;
 
 // TODO: add any additional styles used by UserAvatar.stories.js
 .theme-section {
-  /* stylelint-disable-next-line carbon/layout-use */
-  padding: spacing.$spacing-05;
-  background: theme.$background;
-  color: theme.$text-primary;
+  padding: $spacing-05;
+  background: $background;
+  color: $text-primary;
 }
 
 .theme-text {
-  /* stylelint-disable-next-line carbon/layout-use */
-  margin-bottom: spacing.$spacing-03;
+  margin-bottom: $spacing-03;
 }
